# quetzalcoatl

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  notes.md
src/: CMakeLists.txt  Game.cpp  Game.h  MainWindow.cpp  MainWindow.hpp  Snake.cpp  Snake.h  global.cpp  global.h  main.cpp  resources.qrc
test/: CMakeLists.txt  gameTest.cpp
